# verkiezing-vibecheck

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  li_session.pkl  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 1b1b0e125970_add_motions_tables_and_party_motion_.py  51c40c36a574_add_linkedin_summary_to_candidates.py  a1b2c3d4e5f6_add_hnsw_index_on_documents_embedding.py  b2c3d4e5f6a7_add_social_posts_table.py  c1913b8250a6_add_platform_to_social_posts.py  c3d4e5f6a7b8_add_party_seats_and_poll.py  e573ef0afc85_initial_schema.py  eb524fd99adc_add_polls_and_poll_results_tables.py  f3a1b2c4d5e6_add_linkedin_profile_fields_to_candidates.py
app/: config.py  database.py  main.py
app/models/: __init__.py  candidate.py  document.py  election.py  motion.py  party.py  poll.py  social_post.py  topic.py
app/routers/: candidates.py  compare.py  elections.py  home.py  motions.py  parties.py  search.py
app/services/: embedding.py  ingest.py  llm.py  notubiz.py  pdf.py  polls.py  search.py
app/templates/: base.html  compare.html  home.html  programmas.html  search.html  search_results.html
deploy/: deploy.sh  provision.sh
scripts/: fetch_linkedin.py  fetch_motions.py  fetch_polls.py  fetch_social.py  generate_bij1_pdf.py  generate_comparisons.py  generate_embeddings.py  generate_linkedin_summaries.py  generate_motion_summaries.py  generate_summaries.py  hydrate_bluesky_handles.py  hydrate_linkedin_urls.py  ingest.py  run_pipeline.sh
tests/: conftest.py  test_routes.py
(+17 files in other folders)
